--- a/app/views/08/level.html
+++ b/app/views/08/level.html
@@ -14,7 +14,7 @@
 
     <p>Most qualifications have a difficulty level. The higher the level, the more difficult. Some qualifications like Apprenticeships or vocational qualifications can be studied at different levels.</p>
     
-    <p><a href="https://www.gov.uk/what-different-qualification-levels-mean/list-of-qualification-levels" target="_blank">What qualification levels mean (opens in new tab)</a></p>
+    <p><a href="https://www.gov.uk/what-different-qualification-levels-mean/list-of-qualification-levels">What qualification levels mean</a></p>
 
 
     {{ govukCheckboxes({
