Updated training options link

--- a/app/views/08/age.html
+++ b/app/views/08/age.html
@@ -20,7 +20,7 @@
           
         <p>This is often linked to age. As well as what qualifications you already have or your employment status.  </p>
 
-        <p><a href="https://www.skillsforcareers.education.gov.uk/your-training-options">Discover the different training options</a> </p>
+        <p><a href="training-options">Discover the different training options</a> </p>
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" role="group" aria-describedby="age-hint">
