--- a/app/views/08/age.html
+++ b/app/views/08/age.html
@@ -11,7 +11,7 @@
       <div class="govuk-grid-column-two-thirds">
 
         <h1 class="govuk-heading-l">
-          About you
+          Your age
         </h1>
     
         <p>This is optional but telling us means you will see more relevant results.  </p>
