--- a/app/views/08/course-detail.html
+++ b/app/views/08/course-detail.html
@@ -483,7 +483,7 @@
   text: "Go to course"
 }) }}
 
-<p>The information we show you about a course comes from the provider. If you want to know more about a course visit their website. You can also email or call them if you have any questions or want to discuss your options.</p>
+<p>The details we show you comes from the provider. There may be extra information on their website. You can also email or call them if you have any questions or want to discuss your options.  </p>
 
 {% endif %}
 
