--- a/app/views/08/location.html
+++ b/app/views/08/location.html
@@ -14,7 +14,7 @@
 
   <p>You can search anywhere in England.</p>
 
-  <p>However, some courses are only available to people living in the local area. This is more common for short courses or those aiming to help you find employment. And can apply even if it is online training. Check with the provider if you are unsure. </p>
+  <p>Some courses are only available to people living in the local area. This can apply even if it is online training. It is more common for short courses or those aiming to help you find employment.  Check with the provider if you are unsure. </p>
 
   <div class="govuk-form-group">
     <h1 class="govuk-label-wrapper">
