--- a/app/views/08/search-results-no-results.html
+++ b/app/views/08/search-results-no-results.html
@@ -22,11 +22,11 @@
  
    <p> Here are some things you can try  </p>
    <ul class="govuk-list govuk-list--bullet">
-    <li>remove a filter </li>
+    <li>removing a filter </li>
     
-   <li> make your search broader </li>
+   <li> making your search broader </li>
     
-   <li> increase the distance or try a different location</li>
+   <li>increasing the distance or looking in a different location  n</li>
 
   </ul>
 
