--- a/app/views/08/search-results-no-results.html
+++ b/app/views/08/search-results-no-results.html
@@ -26,7 +26,7 @@
     
    <li> making your search broader </li>
     
-   <li>increasing the distance or looking in a different location  n</li>
+   <li>increasing the distance or looking in a different location</li>
 
   </ul>
 
