Added logic for no results pages

--- a/app/views/08/search-results-no-results.html
+++ b/app/views/08/search-results-no-results.html
@@ -22,11 +22,10 @@
  
    <p> Here are some things you can try  </p>
    <ul class="govuk-list govuk-list--bullet">
-    <li>removing a filter </li>
     
-   <li> making your search broader </li>
+   <li><a href="interests">making your search broader</a> </li>
     
-   <li>increasing the distance or looking in a different location</li>
+   <li><a href="location">increasing the distance or looking in a different location</a></li>
 
   </ul>
 
