--- a/app/views/08/courses.html
+++ b/app/views/08/courses.html
@@ -225,7 +225,7 @@
     {% if noResults %}
 
         <h2 class="govuk-heading-m" role="status" aria-live="polite">It looks like we can’t find anything based on your answers.</h2>
-        <p>Here are some things you can try</p>
+        <p>Here are some things you can try:</p>
         <ul class="govuk-list govuk-list--bullet">
           <li>removing a filter</li>
           <li><a href="interests">making your search broader</a></li>
