--- a/app/views/08/search-results-no-results.html
+++ b/app/views/08/search-results-no-results.html
@@ -20,7 +20,7 @@
 
    <p>It looks like we can't find anything based on your answers. </p>
  
-   <p> Here are some things you can try  </p>
+   <p> Here are some things you can try:  </p>
    <ul class="govuk-list govuk-list--bullet">
     
    <li><a href="interests">making your search broader</a> </li>
