Updated 08 start page and removed 09

--- a/app/views/08/start-page.html
+++ b/app/views/08/start-page.html
@@ -31,6 +31,8 @@
             <li>removed location from filters</li>
             <li>added AI related content</li>
             <li>added truncation to course overview</li>
+            <li>updated no results content and functionality</li>
+            <li>content changes based on crit feedback</li>
         </ul>
 
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
