Updated multiple locations course details page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -15,13 +15,13 @@
       In progress
     </h2>
 
-    <h3 class="govuk-heading-s">v8 - October 2025</h3> 
+    <h3 class="govuk-heading-s">v9 - October 2025</h3> 
 
     <p>This prototype is still in development.</p>
     
     {{ govukButton({
       text: "View prototype",
-      href: "08/start-page"
+      href: "09/start-page"
     }) }}
 
     <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
@@ -30,13 +30,13 @@
       Latest baselined
     </h2>
 
-    <h3 class="govuk-heading-s">v7 - September 2025</h3> 
+    <h3 class="govuk-heading-s">v8 - October 2025</h3> 
 
     <p>This prototype has been baselined. Jira stories have been written based on this version.</p>
     
     {{ govukButton({
       text: "View prototype",
-      href: "07/start-page"
+      href: "08/start-page"
     }) }}
 
     <hr class="govuk-section-break govuk-section-break--m govuk-section-break">
@@ -55,6 +55,17 @@
           </div>
         </div>
         <div id="accordion-with-summary-sections-content-1" class="govuk-accordion__section-content">
+
+          <h3 class="govuk-heading-s">v7 - September 2025</h3> 
+
+    <p>This prototype has been baselined. Jira stories have been written based on this version.</p>
+    
+    {{ govukButton({
+      text: "View prototype",
+      href: "07/start-page"
+    }) }}
+
+    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
          
           <p>Private beta - July 2025</p> <p><a href="06/index">View prototype</a></p>
 
