--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -5,6 +5,11 @@
 
 // Add extra styles here
 
+.govuk-summary-list__row--full-width .govuk-summary-list__value {
+  grid-column: 1 / -1;
+  width: 100%;
+}
+
 .dfe-page-hero {
     padding-top: 40px;
     padding-bottom: 30px;
