--- a/app/views/09/start-page.html
+++ b/app/views/09/start-page.html
@@ -11,26 +11,20 @@
 
 
         <h2 class="govuk-heading-l">
-          Prototype v8 
+          Prototype v9
         </h2>
 
-        <p>This prototype has been baselined.</p> 
-        <p>No further changes will be made to it.</p>
+        {{ govukWarningText({
+            text: "This prototype is currently in progress. Some things may not work as you would expect.",
+            iconFallbackText: "Warning"
+          }) }}
 
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
     
         <h2 class="govuk-heading-m">What's new</h2>
 
         <ul class="govuk-list govuk-list--bullet">
-            <li><a href="https://dfedigital.atlassian.net/browse/FAB-331">FAB-331</a> accessibility improvements - including 'clear filters' links for each filter group</li>
-            <li><a href="https://dfedigital.atlassian.net/browse/FAB-372">FAB-372</a> exception pages</li>
-            <li>added basic autocomplete on town, city or postcode input</li>
-            <li>updated header style</li>
-            <li>removed location from filters</li>
-            <li>added AI related content</li>
-            <li>added truncation to course overview</li>
-            <li>updated no results content and functionality</li>
-            <li>content changes based on crit feedback</li>
+
         </ul>
 
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
