--- a/app/views/09/start-page.html
+++ b/app/views/09/start-page.html
@@ -14,17 +14,15 @@
           Prototype v9
         </h2>
 
-        {{ govukWarningText({
-            text: "This prototype is currently in progress. Some things may not work as you would expect.",
-            iconFallbackText: "Warning"
-          }) }}
+        <p>This prototype has been baselined.</p> 
+        <p>No further changes will be made to it.</p>
 
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
     
         <h2 class="govuk-heading-m">What's new</h2>
 
         <ul class="govuk-list govuk-list--bullet">
-
+           
         </ul>
 
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
