--- a/app/views/09/interests.html
+++ b/app/views/09/interests.html
@@ -13,7 +13,7 @@
 
       <p>Be as specific or broad as you like. You can try searching for academic subjects, practical skills, or just start from an idea of what you'd like to do.</p>
 
-      <p>You can be as specific as you like. For example:</p>
+      <p>For example:</p>
         <ul class="govuk-list govuk-list--bullet">
           <li>maths</li>
           <li>bricklaying</li>
