--- a/app/views/08/layouts/_BASE.html
+++ b/app/views/08/layouts/_BASE.html
@@ -179,24 +179,20 @@ Text goes here, override this by overriding the block
       columns: 2,
       items: [
         {
-          href: "#",
-          text: "About us"
+          href: "https://www.skillsforcareers.education.gov.uk/pages/help/accessibility-statement",
+          text: "Accessibility"
         },
         {
-          href: "#",
-          text: "Help"
+          href: "https://www.skillsforcareers.education.gov.uk/pages/help/privacy-notice",
+          text: "Privacy"
         },
         {
-          href: "#",
-          text: "Privacy and cookies"
+          href: "https://www.skillsforcareers.education.gov.uk/pages/help/cookie-settings",
+          text: "Cookies"
         },
         {
-          href: "#",
-          text: "Accessibility statement"
-        },
-        {
-          href: "#",
-          text: "Terms and conditions"
+          href: "https://www.skillsforcareers.education.gov.uk/pages/help/contact-information",
+          text: "Contact information"
         }
       ]
     },
@@ -205,15 +201,15 @@ Text goes here, override this by overriding the block
       width: "one-third",
       items: [
         {
-          href: "#",
+          href: "https://www.myworldofwork.co.uk/",
           text: "Scotland"
         },
         {
-          href: "#",
+          href: "https://careerswales.gov.wales/",
           text: "Wales"
         },
         {
-          href: "#",
+          href: "https://www.nidirect.gov.uk/campaigns/careers",
           text: "Northern Ireland"
         }
       ]
