Updated course details footer

--- a/app/views/08/courses.html
+++ b/app/views/08/courses.html
@@ -411,20 +411,40 @@
         width: "two-thirds",
         columns: 2,
         items: [
-          { href: "#", text: "About us" },
-          { href: "#", text: "Help" },
-          { href: "#", text: "Privacy and cookies" },
-          { href: "#", text: "Accessibility statement" },
-          { href: "#", text: "Terms and conditions" }
+        {
+          href: "https://www.skillsforcareers.education.gov.uk/pages/help/accessibility-statement",
+          text: "Accessibility"
+        },
+        {
+          href: "https://www.skillsforcareers.education.gov.uk/pages/help/privacy-notice",
+          text: "Privacy"
+        },
+        {
+          href: "https://www.skillsforcareers.education.gov.uk/pages/help/cookie-settings",
+          text: "Cookies"
+        },
+        {
+          href: "https://www.skillsforcareers.education.gov.uk/pages/help/contact-information",
+          text: "Contact information"
+        }
         ]
       },
       {
         title: "Sites for other UK countries",
         width: "one-third",
         items: [
-          { href: "#", text: "Scotland" },
-          { href: "#", text: "Wales" },
-          { href: "#", text: "Northern Ireland" }
+        {
+          href: "https://www.myworldofwork.co.uk/",
+          text: "Scotland"
+        },
+        {
+          href: "https://careerswales.gov.wales/",
+          text: "Wales"
+        },
+        {
+          href: "https://www.nidirect.gov.uk/campaigns/careers",
+          text: "Northern Ireland"
+        }
         ]
       },
       {
