--- a/app/views/08/layouts/_COURSE.html
+++ b/app/views/08/layouts/_COURSE.html
@@ -174,3 +174,56 @@
   </div>
   
   {% endblock %}   
+
+
+  {% block footer %}
+
+{% from "govuk/components/footer/macro.njk" import govukFooter %}
+
+{{ govukFooter({
+  navigation: [
+    {
+      title: "Website information",
+      width: "two-thirds",
+      columns: 2,
+      items: [
+        {
+          href: "https://www.skillsforcareers.education.gov.uk/pages/help/accessibility-statement",
+          text: "Accessibility"
+        },
+        {
+          href: "https://www.skillsforcareers.education.gov.uk/pages/help/privacy-notice",
+          text: "Privacy"
+        },
+        {
+          href: "https://www.skillsforcareers.education.gov.uk/pages/help/cookie-settings",
+          text: "Cookies"
+        },
+        {
+          href: "https://www.skillsforcareers.education.gov.uk/pages/help/contact-information",
+          text: "Contact information"
+        }
+      ]
+    },
+    {
+      title: "Sites for other UK countries",
+      width: "one-third",
+      items: [
+        {
+          href: "https://www.myworldofwork.co.uk/",
+          text: "Scotland"
+        },
+        {
+          href: "https://careerswales.gov.wales/",
+          text: "Wales"
+        },
+        {
+          href: "https://www.nidirect.gov.uk/campaigns/careers",
+          text: "Northern Ireland"
+        }
+      ]
+    }
+  ]
+}) }}
+
+{% endblock %}
