Updated phase banner

--- a/app/views/08/layouts/_HOME.html
+++ b/app/views/08/layouts/_HOME.html
@@ -26,7 +26,7 @@
 
 {{ govukPhaseBanner({
   tag: {
-    text: "Alpha"
+    text: "Beta"
   },
   html: 'This is a new service. Help us improve it and <a class="govuk-link" href="#">give your feedback (opens in new tab)</a>.'
 }) }}
