--- a/app/views/08/layouts/_COURSE.html
+++ b/app/views/08/layouts/_COURSE.html
@@ -77,7 +77,7 @@
         <div class="govuk-phase-banner" style="margin-top: -30px; margin-bottom: 20px;">
           <p class="govuk-phase-banner__content">
             <strong class="govuk-tag govuk-phase-banner__content__tag">
-              Alpha
+              Beta
             </strong>
             <span class="govuk-phase-banner__text">
               This is a new service. Help us improve it and <a class="govuk-link" href="#">give your feedback (opens in new tab)</a>.
