--- a/app/views/08/layouts/_RESULTS.html
+++ b/app/views/08/layouts/_RESULTS.html
@@ -24,6 +24,13 @@
 
 {% block beforeContent %}
 
+{{ govukPhaseBanner({
+  tag: {
+    text: "Beta"
+  },
+  html: 'This is a new service. Help us improve it and <a class="govuk-link" href="#">give your feedback (opens in new tab)</a>.'
+}) }}
+
 {% if back %}
 <a href="javascript:history.back()" class="govuk-back-link">Back</a>
 {% endif %}
