--- a/app/views/09/start-page.html
+++ b/app/views/09/start-page.html
@@ -14,7 +14,7 @@
           Prototype v9
         </h2>
 
-        <p>This prototype has been baselined.</p> 
+        <p>This prototype is still in development. Some things may not work as you expect.</p> 
         <p>No further changes will be made to it.</p>
 
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
