--- a/app/views/08/level.html
+++ b/app/views/08/level.html
@@ -29,6 +29,7 @@
       hint: {
         text: "Select all that apply."
       },
+      values: data['qualification-level'],
       items: [
         {
           value: "none",
@@ -48,6 +49,7 @@
         }
       ]
     }) }}
+    
     
   </div>
   
