Updated footer links

--- a/app/views/08/layouts/_BASE.html
+++ b/app/views/08/layouts/_BASE.html
@@ -78,7 +78,7 @@
         <div class="govuk-phase-banner" style="margin-top: -30px; margin-bottom: 20px;">
           <p class="govuk-phase-banner__content">
             <strong class="govuk-tag govuk-phase-banner__content__tag">
-              Alpha
+              Beta
             </strong>
             <span class="govuk-phase-banner__text">
               This is a new service. Help us improve it and <a class="govuk-link" href="#">give your feedback (opens in new tab)</a>.
@@ -179,15 +179,15 @@ Text goes here, override this by overriding the block
       columns: 2,
       items: [
         {
-          href: "https://www.skillsforcareers.education.gov.uk/pages/help/accessibility-statement",
+          href: "accessibility-statement",
           text: "Accessibility"
         },
         {
-          href: "https://www.skillsforcareers.education.gov.uk/pages/help/privacy-notice",
+          href: "privacy",
           text: "Privacy"
         },
         {
-          href: "https://www.skillsforcareers.education.gov.uk/pages/help/cookie-settings",
+          href: "cookies",
           text: "Cookies"
         },
         {
