--- a/app/views/08/layouts/_QUESTION.html
+++ b/app/views/08/layouts/_QUESTION.html
@@ -58,18 +58,18 @@ Text goes here, override this by overriding the block
       width: "two-thirds",
       columns: 2,
       items: [
-        {
-          href: "https://www.skillsforcareers.education.gov.uk/pages/help/accessibility-statement",
-          text: "Accessibility"
-        },
-        {
-          href: "https://www.skillsforcareers.education.gov.uk/pages/help/privacy-notice",
-          text: "Privacy"
-        },
-        {
-          href: "https://www.skillsforcareers.education.gov.uk/pages/help/cookie-settings",
-          text: "Cookies"
-        },
+      {
+        href: "accessibility-statement",
+        text: "Accessibility"
+      },
+      {
+        href: "privacy",
+        text: "Privacy"
+      },
+      {
+        href: "cookies",
+        text: "Cookies"
+      },
         {
           href: "https://www.skillsforcareers.education.gov.uk/pages/help/contact-information",
           text: "Contact information"
