--- a/app/views/09/check-answers.html
+++ b/app/views/09/check-answers.html
@@ -21,7 +21,7 @@
      {{ data['location'] }}
     </dd>
     <dd class="govuk-summary-list__actions">
-      <a class="govuk-link" href="location">Change<span class="govuk-visually-hidden"> date of birth</span></a>
+      <a class="govuk-link" href="location?from=check-answers">Change<span class="govuk-visually-hidden"> date of birth</span></a>
     </dd>
   </div>
 
@@ -52,7 +52,7 @@
     </dd>
 
     <dd class="govuk-summary-list__actions">
-      <a class="govuk-link" href="location">Change<span class="govuk-visually-hidden"> address</span></a>
+      <a class="govuk-link" href="location?from=check-answers">Change<span class="govuk-visually-hidden"> address</span></a>
     </dd>
   </div>
 
@@ -69,7 +69,7 @@
       {{ data['interest-1'] }} {% if (data['interest-2']) %}, {{ data['interest-2'] }}{% endif %}{% if (data['interest-3']) %}, {{ data['interest-3'] }}{% endif %}
     </dd>
     <dd class="govuk-summary-list__actions">
-      <a class="govuk-link" href="interests">Change<span class="govuk-visually-hidden"> name</span></a>
+      <a class="govuk-link" href="interests?from=check-answers">Change<span class="govuk-visually-hidden"> name</span></a>
     </dd>
   </div>
 
@@ -101,7 +101,7 @@
     {% endif %}
     </dd>
     <dd class="govuk-summary-list__actions">
-      <a class="govuk-link" href="level">Change<span class="govuk-visually-hidden"> address</span></a>
+      <a class="govuk-link" href="level?from=check-answers">Change<span class="govuk-visually-hidden"> address</span></a>
     </dd>
   </div>
 {% endif %}
@@ -128,7 +128,7 @@
   {% endif %}
   </dd>
   <dd class="govuk-summary-list__actions">
-    <a class="govuk-link" href="age">Change<span class="govuk-visually-hidden"> date of birth</span></a>
+    <a class="govuk-link" href="age?from=check-answers">Change<span class="govuk-visually-hidden"> date of birth</span></a>
   </dd>
 </div>
 
