--- a/app/views/09/layouts/_BASE.html
+++ b/app/views/09/layouts/_BASE.html
@@ -78,7 +78,7 @@
         <div class="govuk-phase-banner" style="margin-top: -30px; margin-bottom: 20px;">
           <p class="govuk-phase-banner__content">
             <strong class="govuk-tag govuk-phase-banner__content__tag">
-              Alpha
+              Beta
             </strong>
             <span class="govuk-phase-banner__text">
               This is a new service. Help us improve it and <a class="govuk-link" href="#">give your feedback (opens in new tab)</a>.
@@ -179,24 +179,20 @@ Text goes here, override this by overriding the block
       columns: 2,
       items: [
         {
-          href: "#",
-          text: "About us"
+          href: "accessibility-statement",
+          text: "Accessibility"
         },
         {
-          href: "#",
-          text: "Help"
+          href: "privacy",
+          text: "Privacy"
         },
         {
-          href: "#",
-          text: "Privacy and cookies"
+          href: "cookies",
+          text: "Cookies"
         },
         {
-          href: "#",
-          text: "Accessibility statement"
-        },
-        {
-          href: "#",
-          text: "Terms and conditions"
+          href: "https://www.skillsforcareers.education.gov.uk/pages/help/contact-information",
+          text: "Contact information"
         }
       ]
     },
@@ -205,15 +201,15 @@ Text goes here, override this by overriding the block
       width: "one-third",
       items: [
         {
-          href: "#",
+          href: "https://www.myworldofwork.co.uk/",
           text: "Scotland"
         },
         {
-          href: "#",
+          href: "https://careerswales.gov.wales/",
           text: "Wales"
         },
         {
-          href: "#",
+          href: "https://www.nidirect.gov.uk/campaigns/careers",
           text: "Northern Ireland"
         }
       ]
