--- a/app/views/09/layouts/_COURSE.html
+++ b/app/views/09/layouts/_COURSE.html
@@ -77,7 +77,7 @@
         <div class="govuk-phase-banner" style="margin-top: -30px; margin-bottom: 20px;">
           <p class="govuk-phase-banner__content">
             <strong class="govuk-tag govuk-phase-banner__content__tag">
-              Alpha
+              Beta
             </strong>
             <span class="govuk-phase-banner__text">
               This is a new service. Help us improve it and <a class="govuk-link" href="#">give your feedback (opens in new tab)</a>.
@@ -174,3 +174,56 @@
   </div>
   
   {% endblock %}   
+
+
+  {% block footer %}
+
+{% from "govuk/components/footer/macro.njk" import govukFooter %}
+
+{{ govukFooter({
+  navigation: [
+    {
+      title: "Website information",
+      width: "two-thirds",
+      columns: 2,
+      items: [
+      {
+        href: "accessibility-statement",
+        text: "Accessibility"
+      },
+      {
+        href: "privacy",
+        text: "Privacy"
+      },
+      {
+        href: "cookies",
+        text: "Cookies"
+      },
+        {
+          href: "https://www.skillsforcareers.education.gov.uk/pages/help/contact-information",
+          text: "Contact information"
+        }
+      ]
+    },
+    {
+      title: "Sites for other UK countries",
+      width: "one-third",
+      items: [
+        {
+          href: "https://www.myworldofwork.co.uk/",
+          text: "Scotland"
+        },
+        {
+          href: "https://careerswales.gov.wales/",
+          text: "Wales"
+        },
+        {
+          href: "https://www.nidirect.gov.uk/campaigns/careers",
+          text: "Northern Ireland"
+        }
+      ]
+    }
+  ]
+}) }}
+
+{% endblock %}
