--- a/app/views/09/privacy.html
+++ b/app/views/09/privacy.html
@@ -22,7 +22,7 @@
           <a href="https://www.gov.uk/government/organisations/department-for-education/about/personal-information-charter" class="govuk-link">Department for Education’s personal information charter</a>.
         </p>
   
-        <h2 class="govuk-heading-l">What data we collect from you</h2>
+        <h2 class="govuk-heading-m">What data we collect from you</h2>
   
         <p class="govuk-body">
           We collect some data automatically when you visit Find education and training. This includes your Internet Protocol (IP) address 
