--- a/app/views/09/check-answers.html
+++ b/app/views/09/check-answers.html
@@ -136,7 +136,7 @@
 
 
 </dl>
-<p>Find out <a href="ai">how we use AI</a> to bring you relevant results.</p>
+<p>Find out <a href="how-we-use-ai">how we use AI</a> to bring you relevant results.</p>
 
 <button type="submit" class="govuk-button" data-module="govuk-button">
   Search
